--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 
   <body>
     <!-- the entire body must be written by student -->
-    <form>
+    <form id="myForm">
       <label for="fontsize">Font Size:</label>
       <input
         type="number"
